# meson-and-v-simple

./: .gitignore  README.md  meson.build  meson.options  v.mod
installed/: app
src/: main.v
